--- a/client/html/regform.html
+++ b/client/html/regform.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <nav>
-        <span>Log In</span>
-        <span>Sign Up</span>
+        <span><a href="">Log In</a></span>
+        <span><a href="">Sign Up</a></span>
     </nav>
     <form>
         <div class="container">
